# vinftrjp

./: .gitignore  README.md  pyproject.toml
change_point/: Change-point.R  Data_change-point.txt  Simulation_study.R
data/raw/: ChangePoint_ChangePointModelVINF_NS100000_seed2026_K10_ar.npy  ChangePoint_ChangePointModelVINF_NS100000_seed2026_K10_llh.npy  ChangePoint_ChangePointModelVINF_NS100000_seed2026_K10_logprior.npy  ChangePoint_ChangePointModelVINF_NS100000_seed2026_K10_posterior_k.csv  ChangePoint_ChangePointModelVINF_NS100000_seed2026_K10_summary.txt  ChangePoint_ChangePointModelVINF_NS10_seed7_K1_llh.npy  ChangePoint_ChangePointModelVINF_NS10_seed7_K1_logprior.npy  ChangePoint_ChangePointModelVINF_NS10_seed7_K1_ptheta.npy  ChangePoint_ChangePointModelVINF_NS10_seed7_K1_summary.txt  ChangePoint_ChangePointModelVINF_NS10_seed7_K1_theta.npy  ChangePoint_ChangePointModelVINF_NS40000_seed2222_K10_ar.npy  ChangePoint_ChangePointModelVINF_NS40000_seed2222_K10_llh.npy  ChangePoint_ChangePointModelVINF_NS40000_seed2222_K10_logprior.npy  ChangePoint_ChangePointModelVINF_NS40000_seed2222_K10_posterior_k.csv  ChangePoint_ChangePointModelVINF_NS40000_seed2222_K10_ptheta.npy  ChangePoint_ChangePointModelVINF_NS40000_seed2222_K10_summary.txt  ChangePoint_ChangePointModelVINF_NS40000_seed2222_K10_theta.npy  ChangePoint_ChangePointModelVINF_NS40_seed123_K3_ar.npy  ChangePoint_ChangePointModelVINF_NS40_seed123_K3_llh.npy  ChangePoint_ChangePointModelVINF_NS40_seed123_K3_logprior.npy  ChangePoint_ChangePointModelVINF_NS40_seed123_K3_posterior_k.csv  ChangePoint_ChangePointModelVINF_NS40_seed123_K3_ptheta.npy  ChangePoint_ChangePointModelVINF_NS40_seed123_K3_summary.txt  ChangePoint_ChangePointModelVINF_NS40_seed123_K3_theta.npy  ChangePoint_ChangePointModelVINF_NS5_seed11_K1_llh.npy  ChangePoint_ChangePointModelVINF_NS5_seed11_K1_logprior.npy  ChangePoint_ChangePointModelVINF_NS5_seed11_K1_posterior_k.csv  ChangePoint_ChangePointModelVINF_NS5_seed11_K1_ptheta.npy  ChangePoint_ChangePointModelVINF_NS5_seed11_K1_summary.txt  ChangePoint_ChangePointModelVINF_NS5_seed11_K1_theta.npy  ChangePoint_ChangePointModelVINF_NS80_seed321_K3_ar.npy  ChangePoint_ChangePointModelVINF_NS80_seed321_K3_llh.npy  ChangePoint_ChangePointModelVINF_NS80_seed321_K3_logprior.npy  ChangePoint_ChangePointModelVINF_NS80_seed321_K3_posterior_k.csv  ChangePoint_ChangePointModelVINF_NS80_seed321_K3_ptheta.npy  ChangePoint_ChangePointModelVINF_NS80_seed321_K3_summary.txt  ChangePoint_ChangePointModelVINF_NS80_seed321_K3_theta.npy  FA_FactorAnalysisModelVINFIS_N4000_pyMC_run1_IS_NS100000_ar_Exp1.npy  FA_FactorAnalysisModelVINFIS_N4000_pyMC_run1_IS_NS100000_llh_Exp1.npy  FA_FactorAnalysisModelVINFIS_N4000_pyMC_run1_IS_NS100000_logprior_Exp1.npy  (+258 more)
docs/: change_point_ctp_numerical_study.tex  change_point_method_cn.md
scripts/: run.py
scripts/change_point/: change_point_vinfs.py  compare_change_point_vinf_vs_cnf.py  generate_change_point_smc_samples.py  run_change_point_rjmcmc.py
scripts/fa/: fa_base.py  fa_vinfs.py  plot_fa.py  plot_fa_proposal.py  plot_fa_rjbridge.py  plot_fa_rjmcmc.py  plot_fa_vinf_vs_vinfis_nightly.py  plot_rjbridge_ablation.py  plot_rjmcmc_ablation.py  run_fa.py  run_fa_generate_posterior.py  run_fa_rjbridge.py  run_fa_rjbridge_ablation.py  run_fa_rjmcmc.py  run_fa_rjmcmc_ablation.py  run_fa_rjmcmc_is.py  run_fa_rjmcmc_rf.py  run_fa_vinf_comparison_nightly.py
scripts/sas/: plot_sas_comparison_nightly.py  plot_sas_mp_trace.py  plot_sinharcsinh_prop_all.py  run_sas.py  run_sas_comparison_nightly.py  run_sas_mp_trace.py  run_sas_mp_trace_vinf_ablation.py  sas_base.py  sas_vinfs.py
scripts/vs/: plot_bbe_violin_all_vinf_ablation.py  plot_vs.py  run_smc.py  run_vs_rjbridge_vicnfs_ablation.py  run_vs_rjbridge_vinfs_ablation.py  vs_base.py  vs_vicnfs.py  vs_vinfs.py
src/algorithms/: __init__.py  utils.py
src/distributions/: __init__.py  base.py
src/main/: __init__.py
src/problems/: __init__.py  change_point.py  fa.py  sas.py  vsc.py
src/proposals/: proposals.py  standard_proposals.py
src/samplers/: __init__.py  mcmc.py
src/transforms/: __init__.py  base.py
src/utils/: linalgtools.py  parallel.py
src/variables/: __init__.py
src/vi_nflows/: __init__.py  (+6 more)
vinftrjp/: .gitignore  README.md
(+376 files in other folders)
